fixed gap

--- a/app/app.css
+++ b/app/app.css
@@ -300,7 +300,7 @@ li,
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	gap: 3px;
+	gap: 5px;
 	width: 100%;
 	white-space: nowrap;
 }
